--- a/cf/i18n/resources/pt-br.untranslated.json
+++ b/cf/i18n/resources/pt-br.untranslated.json
@@ -1576,6 +1576,10 @@
     "translation": ""
   },
   {
+    "id": "Retrieve the rules for all the security groups associated with the space.",
+    "translation": ""
+  },
+  {
     "id": "Retrieving logs for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
     "translation": ""
   },
@@ -2080,6 +2084,10 @@
     "translation": "apps"
   },
   {
+    "id": "apps:",
+    "translation": ""
+  },
+  {
     "id": "billingmanager",
     "translation": ""
   },
@@ -2120,6 +2128,10 @@
     "translation": "description"
   },
   {
+    "id": "destination",
+    "translation": ""
+  },
+  {
     "id": "does exist",
     "translation": "does exist"
   },
@@ -2152,6 +2164,10 @@
     "translation": "label"
   },
   {
+    "id": "lifecycle",
+    "translation": ""
+  },
+  {
     "id": "locked",
     "translation": "locked"
   },
@@ -2168,11 +2184,27 @@
     "translation": "org"
   },
   {
+    "id": "org:",
+    "translation": ""
+  },
+  {
+    "id": "ports",
+    "translation": ""
+  },
+  {
+    "id": "protocol",
+    "translation": ""
+  },
+  {
     "id": "repo-plugins",
     "translation": "repo-plugins"
   },
   {
     "id": "run-task",
+    "translation": ""
+  },
+  {
+    "id": "security groups:",
     "translation": ""
   },
   {
@@ -2182,6 +2214,14 @@
   {
     "id": "service_guid IN ",
     "translation": "service_guid IN "
+  },
+  {
+    "id": "services:",
+    "translation": ""
+  },
+  {
+    "id": "space quota:",
+    "translation": ""
   },
   {
     "id": "sso-passcode",
