--- a/cf/i18n/resources/zh-hans.untranslated.json
+++ b/cf/i18n/resources/zh-hans.untranslated.json
@@ -1536,6 +1536,10 @@
     "translation": ""
   },
   {
+    "id": "Retrieve the rules for all the security groups associated with the space.",
+    "translation": ""
+  },
+  {
     "id": "Retrieving logs for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
     "translation": ""
   },
@@ -2028,6 +2032,10 @@
     "translation": ""
   },
   {
+    "id": "apps:",
+    "translation": ""
+  },
+  {
     "id": "billingmanager",
     "translation": ""
   },
@@ -2056,6 +2064,10 @@
     "translation": ""
   },
   {
+    "id": "destination",
+    "translation": ""
+  },
+  {
     "id": "does exist",
     "translation": "does exist"
   },
@@ -2072,8 +2084,24 @@
     "translation": ""
   },
   {
+    "id": "lifecycle",
+    "translation": ""
+  },
+  {
     "id": "name:",
     "translation": "name:"
+  },
+  {
+    "id": "org:",
+    "translation": ""
+  },
+  {
+    "id": "ports",
+    "translation": ""
+  },
+  {
+    "id": "protocol",
+    "translation": ""
   },
   {
     "id": "repo-plugins",
@@ -2081,6 +2109,10 @@
   },
   {
     "id": "run-task",
+    "translation": ""
+  },
+  {
+    "id": "security groups:",
     "translation": ""
   },
   {
@@ -2094,6 +2126,14 @@
   {
     "id": "service_guid IN ",
     "translation": "service_guid IN "
+  },
+  {
+    "id": "services:",
+    "translation": ""
+  },
+  {
+    "id": "space quota:",
+    "translation": ""
   },
   {
     "id": "sso-passcode",
